# kangaroo-x2-ros2

./: .gitignore  .gitmodules  README.md  TODO.md
kangaroo-x2-bringup/: CMakeLists.txt  package.xml
kangaroo-x2-bringup/launch/: kangaroo_x2.launch.py
kangaroo-x2-bringup/params/: default_params.yaml
kangaroo-x2-component/: CMakeLists.txt  package.xml
kangaroo-x2-component/component/include/: kangaroo_x2_component.hpp  odometry.hpp
kangaroo-x2-component/component/src/: kangaroo_x2_component.cpp  odometry.cpp
kangaroo-x2-component/include/: visibility_control.hpp
kangaroo-x2-component/lib-kangaroo-x2-cpp/: CMakeLists.txt  README.md
kangaroo-x2-component/lib-kangaroo-x2-cpp/examples/: example_mixed_model.cpp  example_tune_mixed_model.cpp
kangaroo-x2-component/lib-kangaroo-x2-cpp/include/: Kangaroo.hpp  KangarooCRC.hpp  KangarooChannel.hpp  KangarooCommandWriter.hpp  KangarooMonitor.hpp  KangarooReplyReader.hpp  KangarooReplyReceiver.hpp  KangarooSerial.hpp  KangarooStatus.hpp  KangarooTimeout.hpp  Stream.hpp  tools.hpp  types.hpp
kangaroo-x2-component/lib-kangaroo-x2-cpp/src/: KangarooCRC.cpp  KangarooChannel.cpp  KangarooCommandWriter.cpp  KangarooMonitor.cpp  KangarooReplyReader.cpp  KangarooReplyReceiver.cpp  KangarooSerial.cpp  KangarooStatus.cpp  KangarooTimeout.cpp  Stream.cpp  tools.cpp
kangaroo-x2-component/tools/include/: kx2_tools.hpp  kx2_win_avg.hpp
kangaroo-x2-component/tools/src/: kx2_tools.cpp  kx2_win_avg.cpp
kangaroo-x2-node/: CMakeLists.txt  package.xml
kangaroo-x2-node/launch/: kangaroo_x2.launch.py
kangaroo-x2-node/params/: default_params.yaml
kangaroo-x2-ros2/: CMakeLists.txt  package.xml
kangaroo_lib/: CMakeLists.txt  README.md
kangaroo_lib/examples/: CMakeLists.txt  example_mixed_model.cpp  example_tune_mixed_model.cpp
kangaroo_lib/include/: Kangaroo.hpp  KangarooCRC.hpp  KangarooChannel.hpp  KangarooCommandWriter.hpp  KangarooMonitor.hpp  KangarooReplyReader.hpp  KangarooReplyReceiver.hpp  KangarooSerial.hpp  KangarooStatus.hpp  KangarooTimeout.hpp  Stream.hpp  tools.hpp  types.hpp
kangaroo_lib/include/compatibility/: Print.h  Stream.h
kangaroo_lib/src/: KangarooCRC.cpp  KangarooChannel.cpp  KangarooCommandWriter.cpp  KangarooMonitor.cpp  KangarooReplyReader.cpp  KangarooReplyReceiver.cpp  KangarooSerial.cpp  KangarooStatus.cpp  KangarooTimeout.cpp  Stream.cpp  tools.cpp
kangaroo_lib/src/compatibility/: Print.cpp  Stream.cpp
kangaroo_x2_lib/: CMakeLists.txt  README.md
kangaroo_x2_lib/cmake-modules/: FindLibSerial.cmake
kangaroo_x2_lib/examples/: example_mixed_model.cpp  example_tune_mixed_model.cpp
kangaroo_x2_lib/include/: Kangaroo.hpp  KangarooChannel.hpp  KangarooCommandWriter.hpp  KangarooMonitor.hpp  KangarooReplyReceiver.hpp  KangarooSerial.hpp  KangarooStatus.hpp  KangarooTimeout.hpp  Stream.hpp  tools.hpp  types.hpp
kangaroo_x2_lib/src/: KangarooChannel.cpp  KangarooCommandWriter.cpp  KangarooMonitor.cpp  KangarooReplyReader.cpp  KangarooReplyReceiver.cpp  KangarooSerial.cpp  KangarooStatus.cpp  Stream.cpp  tools.cpp
