<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
	<name>kangaroo_x2_bringup</name>
	<version>0.1.0</version>
	<description>Package that contains the config and example launch files for the kangaroo-x2-component.</description>
	<maintainer email="walter.lucetti@myzhar.com">Walter Lucetti</maintainer>
	<license>Apache License 2.0</license>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<build_depend>kangaroo_x2_component</build_depend>
	<exec_depend>kangaroo_x2_component</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>nav2_lifecycle_manager</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<test_depend>ament_cmake_pytest</test_depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<test_depend>launch</test_depend>
	<test_depend>launch_testing</test_depend>
	<test_depend>launch_testing_ros</test_depend>
	<test_depend>launch_testing_ament_cmake</test_depend>
	<test_depend>rmw_implementation_cmake</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>