<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kangaroo_x2_ros2</name>
  <version>0.1.0</version>
  <description>Kangaroo x2 ROS 2 meta package</description>

  <maintainer email="myzhar@myzhar.com">Myzhar</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://myzhar.com/</url>
  <url type="repository">https://github.com/Myzhar/kangaroo-x2-ros2</url>
  <url type="bugtracker">https://github.com/Myzhar/kangaroo-x2-ros2/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kangaroo_x2_component</exec_depend>
  <exec_depend>kangaroo_x2_node</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
